@@ -1,3 +1,9 @@
+2005-09-26  Kazuhiko  <kazuhiko@fdiary.net>
+	* misc/plugin/rss-show.rb: use the rss library.
+
+	* style/default/hikidoc.rb: sync with hikidoc rev.27.
+	  revise parse_plugin.
+
 2005-09-20  Kazuhiko  <kazuhiko@fdiary.net>
 	* style/default/html_formatter.rb (replace_link): display
 	specified titles in interwikis (closs #25).
